CloudCover_prototype_testbed/anvResearch-main/kube_scripts/OPA-Testing/etcd-sidecar/fake-service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: fs2 # Modify this line with the service name
  labels:
    app: fs2 # Modify this line with the service name
    service: fs2 # Modify this line with the service name
spec:
  ports:
  - port: 82 # Modify this line with the listening port
    name: http
  selector:
    app: fs2 # Modify this line with the service name
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fs2 # Modify this line with the service name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fs2 # Modify this line with the service name
  template:
    metadata:
      labels:
        app: fs2 # Modify this line with the service name
    spec:
      nodeSelector:
        appName: fs2
      terminationGracePeriodSeconds: 0
      serviceAccountName: fs2 # Modify this line with the service name
      containers:
      - name: fake-service2 # Modify this line with the service name
        image: nicholasjackson/fake-service:v0.24.2
        imagePullPolicy: IfNotPresent
      - name: etcd
        image: bitnami/etcd
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 2379
        - containerPort: 2380
