CloudCover_prototype_testbed/anvResearch-main/kube_scripts/OPA-Testing/etcd-sidecar/envFilter.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ext-headers-append # Modify this line with a unique name for the target service
  namespace: default
spec:
  configPatches:
  - applyTo: ROUTE_CONFIGURATION
    match:
      context: SIDECAR_OUTBOUND
    patch:
      operation: MERGE
      value:
        request_headers_to_add:
          - header:
              key: "tokens"
              value: "ext" # Modify this line with the token for selected service
            append: true
          - header:
              key: "sources"
              value: "ext" # Modify this line with the service name
            append: true
  workloadSelector:
    labels:
      app: ext # Modify this line with the service name
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: fs1-headers-in # Modify this line with a unique name for the target service
  namespace: default
spec:
  workloadSelector:
    labels:
      app: fs1 # Modify this line with the service name
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_FIRST
      value:
        name: envoy.lua
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
          inlineCode: |
            function envoy_on_request(request_handle)
              sources = request_handle:headers():get("sources") or ""
              tokens = request_handle:headers():get("tokens") or ""
              request_handle:logWarn("= RECVD: srcs: "..sources.." tokens: "..tokens.." =")

              local bSources = enc("sourcesFS1")
              local bSrcs = enc(sources)

              local bTokens = enc("tokensFS1")
              local bToks = enc(tokens)

              local headers, body = request_handle:httpCall("etcd", {
                [":method"] = "POST",
                [":path"] = "/v3/kv/put",
                [":authority"] = "fs1",
              }, '{"key": "'..bSources..'", "value": "'..bSrcs..'"}', 300000)

              local headers, body = request_handle:httpCall("etcd", {
                [":method"] = "POST",
                [":path"] = "/v3/kv/put",
                [":authority"] = "fs1",
              }, '{"key": "'..bTokens..'", "value": "'..bToks..'"}', 300000)

            end

            function envoy_on_response(response_handle)
            end

            local b='ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/' -- You will need this for encoding/decoding
            -- encoding
            function enc(data)
                return ((data:gsub('.', function(x)
                    local r,b='',x:byte()
                    for i=8,1,-1 do r=r..(b%2^i-b%2^(i-1)>0 and '1' or '0') end
                    return r;
                end)..'0000'):gsub('%d%d%d?%d?%d?%d?', function(x)
                    if (#x < 6) then return '' end
                    local c=0
                    for i=1,6 do c=c+(x:sub(i,i)=='1' and 2^(6-i) or 0) end
                    return b:sub(c+1,c+1)
                end)..({ '', '==', '=' })[#data%3+1])
            end

            -- decoding
            function dec(data)
                data = string.gsub(data, '[^'..b..'=]', '')
                return (data:gsub('.', function(x)
                    if (x == '=') then return '' end
                    local r,f='',(b:find(x)-1)
                    for i=6,1,-1 do r=r..(f%2^i-f%2^(i-1)>0 and '1' or '0') end
                    return r;
                end):gsub('%d%d%d?%d?%d?%d?%d?%d?', function(x)
                    if (#x ~= 8) then return '' end
                    local c=0
                    for i=1,8 do c=c+(x:sub(i,i)=='1' and 2^(8-i) or 0) end
                        return string.char(c)
                end))
            end
  - applyTo: CLUSTER
    match:
      context: SIDECAR_OUTBOUND
    patch:
      operation: ADD
      value: # cluster specification
        name: "etcd"
        type: STRICT_DNS
        connect_timeout: 0.5s
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: etcd
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    protocol: TCP
                    address: "localhost"
                    port_value: 2379
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: fs1-headers-out # Modify this line with a unique name for the target service
  namespace: default
spec:
  workloadSelector:
    labels:
      app: fs1 # Modify this line with the service name
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_FIRST
      value:
        name: envoy.lua
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
          inlineCode: |
            function envoy_on_request(request_handle)
              sources = request_handle:headers():get("sources") or ""
              tokens = request_handle:headers():get("tokens") or ""

              local bSources = enc("sourcesFS1")
              local bTokens = enc("tokensFS1")

              local headers, body = request_handle:httpCall("etcd", {
                [":method"] = "POST",
                [":path"] = "/v3/kv/range",
                [":authority"] = "fs1",
              }, '{"key": "'..bSources..'"}', 300000)
              local vInd = string.find(body, 'value', 1, true)
              local cInd = string.find(body, 'count', 1, true)
              local srcVal = dec(string.sub(body, vInd+8, cInd-6))

              local headers, body = request_handle:httpCall("etcd", {
                [":method"] = "POST",
                [":path"] = "/v3/kv/range",
                [":authority"] = "fs1",
              }, '{"key": "'..bTokens..'"}', 300000)
              local vInd = string.find(body, 'value', 1, true)
              local cInd = string.find(body, 'count', 1, true)
              srcTok = dec(string.sub(body, vInd+8, cInd-6))

              request_handle:headers():replace("sources", srcVal..",fs1")
              request_handle:headers():replace("tokens", srcTok..",token1")

              local sources = request_handle:headers():get("sources")
              local tokens = request_handle:headers():get("tokens")
              request_handle:logWarn("= SENT srcs: "..sources.." tokens: "..tokens.." =")
            end

            function envoy_on_response(response_handle)
            end

            local b='ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/' -- You will need this for encoding/decoding
            -- encoding
            function enc(data)
                return ((data:gsub('.', function(x)
                    local r,b='',x:byte()
                    for i=8,1,-1 do r=r..(b%2^i-b%2^(i-1)>0 and '1' or '0') end
                    return r;
                end)..'0000'):gsub('%d%d%d?%d?%d?%d?', function(x)
                    if (#x < 6) then return '' end
                    local c=0
                    for i=1,6 do c=c+(x:sub(i,i)=='1' and 2^(6-i) or 0) end
                    return b:sub(c+1,c+1)
                end)..({ '', '==', '=' })[#data%3+1])
            end

            -- decoding
            function dec(data)
                data = string.gsub(data, '[^'..b..'=]', '')
                return (data:gsub('.', function(x)
                    if (x == '=') then return '' end
                    local r,f='',(b:find(x)-1)
                    for i=6,1,-1 do r=r..(f%2^i-f%2^(i-1)>0 and '1' or '0') end
                    return r;
                end):gsub('%d%d%d?%d?%d?%d?%d?%d?', function(x)
                    if (#x ~= 8) then return '' end
                    local c=0
                    for i=1,8 do c=c+(x:sub(i,i)=='1' and 2^(8-i) or 0) end
                        return string.char(c)
                end))
            end
  - applyTo: CLUSTER
    match:
      context: SIDECAR_OUTBOUND
    patch:
      operation: ADD
      value: # cluster specification
        name: "etcd"
        type: STRICT_DNS
        connect_timeout: 0.5s
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: etcd
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    protocol: TCP
                    address: "localhost"
                    port_value: 2379
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: fs2-headers-in # Modify this line with a unique name for the target service
  namespace: default
spec:
  workloadSelector:
    labels:
      app: fs2 # Modify this line with the service name
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_FIRST
      value:
        name: envoy.lua
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
          inlineCode: |
            function envoy_on_request(request_handle)
              sources = request_handle:headers():get("sources") or ""
              tokens = request_handle:headers():get("tokens") or ""
              request_handle:logWarn("= RECVD: srcs: "..sources.." tokens: "..tokens.." =")

              local bSources = enc("sourcesFS1")
              local bSrcs = enc(sources)

              local bTokens = enc("tokensFS1")
              local bToks = enc(tokens)

              local headers, body = request_handle:httpCall("etcd", {
                [":method"] = "POST",
                [":path"] = "/v3/kv/put",
                [":authority"] = "fs2",
              }, '{"key": "'..bSources..'", "value": "'..bSrcs..'"}', 300000)

              local headers, body = request_handle:httpCall("etcd", {
                [":method"] = "POST",
                [":path"] = "/v3/kv/put",
                [":authority"] = "fs2",
              }, '{"key": "'..bTokens..'", "value": "'..bToks..'"}', 300000)

            end

            function envoy_on_response(response_handle)
            end

            local b='ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/' -- You will need this for encoding/decoding
            -- encoding
            function enc(data)
                return ((data:gsub('.', function(x)
                    local r,b='',x:byte()
                    for i=8,1,-1 do r=r..(b%2^i-b%2^(i-1)>0 and '1' or '0') end
                    return r;
                end)..'0000'):gsub('%d%d%d?%d?%d?%d?', function(x)
                    if (#x < 6) then return '' end
                    local c=0
                    for i=1,6 do c=c+(x:sub(i,i)=='1' and 2^(6-i) or 0) end
                    return b:sub(c+1,c+1)
                end)..({ '', '==', '=' })[#data%3+1])
            end

            -- decoding
            function dec(data)
                data = string.gsub(data, '[^'..b..'=]', '')
                return (data:gsub('.', function(x)
                    if (x == '=') then return '' end
                    local r,f='',(b:find(x)-1)
                    for i=6,1,-1 do r=r..(f%2^i-f%2^(i-1)>0 and '1' or '0') end
                    return r;
                end):gsub('%d%d%d?%d?%d?%d?%d?%d?', function(x)
                    if (#x ~= 8) then return '' end
                    local c=0
                    for i=1,8 do c=c+(x:sub(i,i)=='1' and 2^(8-i) or 0) end
                        return string.char(c)
                end))
            end
  - applyTo: CLUSTER
    match:
      context: SIDECAR_OUTBOUND
    patch:
      operation: ADD
      value: # cluster specification
        name: "etcd"
        type: STRICT_DNS
        connect_timeout: 0.5s
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: etcd
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    protocol: TCP
                    address: "localhost"
                    port_value: 2379
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: fs2-headers-out # Modify this line with a unique name for the target service
  namespace: default
spec:
  workloadSelector:
    labels:
      app: fs2 # Modify this line with the service name
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_FIRST
      value:
        name: envoy.lua
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
          inlineCode: |
            function envoy_on_request(request_handle)
              sources = request_handle:headers():get("sources") or ""
              tokens = request_handle:headers():get("tokens") or ""

              local bSources = enc("sourcesFS1")
              local bTokens = enc("tokensFS1")

              local headers, body = request_handle:httpCall("etcd", {
                [":method"] = "POST",
                [":path"] = "/v3/kv/range",
                [":authority"] = "fs2",
              }, '{"key": "'..bSources..'"}', 300000)
              local vInd = string.find(body, 'value', 1, true)
              local cInd = string.find(body, 'count', 1, true)
              local srcVal = dec(string.sub(body, vInd+8, cInd-6))

              local headers, body = request_handle:httpCall("etcd", {
                [":method"] = "POST",
                [":path"] = "/v3/kv/range",
                [":authority"] = "fs2",
              }, '{"key": "'..bTokens..'"}', 300000)
              local vInd = string.find(body, 'value', 1, true)
              local cInd = string.find(body, 'count', 1, true)
              srcTok = dec(string.sub(body, vInd+8, cInd-6))

              request_handle:headers():replace("sources", srcVal..",fs2")
              request_handle:headers():replace("tokens", srcTok..",token2")

              local sources = request_handle:headers():get("sources")
              local tokens = request_handle:headers():get("tokens")
              request_handle:logWarn("= SENT srcs: "..sources.." tokens: "..tokens.." =")
            end

            function envoy_on_response(response_handle)
            end

            local b='ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/' -- You will need this for encoding/decoding
            -- encoding
            function enc(data)
                return ((data:gsub('.', function(x)
                    local r,b='',x:byte()
                    for i=8,1,-1 do r=r..(b%2^i-b%2^(i-1)>0 and '1' or '0') end
                    return r;
                end)..'0000'):gsub('%d%d%d?%d?%d?%d?', function(x)
                    if (#x < 6) then return '' end
                    local c=0
                    for i=1,6 do c=c+(x:sub(i,i)=='1' and 2^(6-i) or 0) end
                    return b:sub(c+1,c+1)
                end)..({ '', '==', '=' })[#data%3+1])
            end

            -- decoding
            function dec(data)
                data = string.gsub(data, '[^'..b..'=]', '')
                return (data:gsub('.', function(x)
                    if (x == '=') then return '' end
                    local r,f='',(b:find(x)-1)
                    for i=6,1,-1 do r=r..(f%2^i-f%2^(i-1)>0 and '1' or '0') end
                    return r;
                end):gsub('%d%d%d?%d?%d?%d?%d?%d?', function(x)
                    if (#x ~= 8) then return '' end
                    local c=0
                    for i=1,8 do c=c+(x:sub(i,i)=='1' and 2^(8-i) or 0) end
                        return string.char(c)
                end))
            end
  - applyTo: CLUSTER
    match:
      context: SIDECAR_OUTBOUND
    patch:
      operation: ADD
      value: # cluster specification
        name: "etcd"
        type: STRICT_DNS
        connect_timeout: 0.5s
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: etcd
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    protocol: TCP
                    address: "localhost"
                    port_value: 2379

---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: fs3-headers-in # Modify this line with a unique name for the target service
  namespace: default
spec:
  workloadSelector:
    labels:
      app: fs3 # Modify this line with the service name
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_FIRST
      value:
        name: envoy.lua
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
          inlineCode: |
            function envoy_on_request(request_handle)
              sources = request_handle:headers():get("sources") or ""
              tokens = request_handle:headers():get("tokens") or ""
              request_handle:logWarn("= RECVD: srcs: "..sources.." tokens: "..tokens.." =")

              local bSources = enc("sourcesFS1")
              local bSrcs = enc(sources)

              local bTokens = enc("tokensFS1")
              local bToks = enc(tokens)

              local headers, body = request_handle:httpCall("etcd", {
                [":method"] = "POST",
                [":path"] = "/v3/kv/put",
                [":authority"] = "fs3",
              }, '{"key": "'..bSources..'", "value": "'..bSrcs..'"}', 300000)

              local headers, body = request_handle:httpCall("etcd", {
                [":method"] = "POST",
                [":path"] = "/v3/kv/put",
                [":authority"] = "fs3",
              }, '{"key": "'..bTokens..'", "value": "'..bToks..'"}', 300000)

            end

            function envoy_on_response(response_handle)
            end

            local b='ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/' -- You will need this for encoding/decoding
            -- encoding
            function enc(data)
                return ((data:gsub('.', function(x)
                    local r,b='',x:byte()
                    for i=8,1,-1 do r=r..(b%2^i-b%2^(i-1)>0 and '1' or '0') end
                    return r;
                end)..'0000'):gsub('%d%d%d?%d?%d?%d?', function(x)
                    if (#x < 6) then return '' end
                    local c=0
                    for i=1,6 do c=c+(x:sub(i,i)=='1' and 2^(6-i) or 0) end
                    return b:sub(c+1,c+1)
                end)..({ '', '==', '=' })[#data%3+1])
            end

            -- decoding
            function dec(data)
                data = string.gsub(data, '[^'..b..'=]', '')
                return (data:gsub('.', function(x)
                    if (x == '=') then return '' end
                    local r,f='',(b:find(x)-1)
                    for i=6,1,-1 do r=r..(f%2^i-f%2^(i-1)>0 and '1' or '0') end
                    return r;
                end):gsub('%d%d%d?%d?%d?%d?%d?%d?', function(x)
                    if (#x ~= 8) then return '' end
                    local c=0
                    for i=1,8 do c=c+(x:sub(i,i)=='1' and 2^(8-i) or 0) end
                        return string.char(c)
                end))
            end
  - applyTo: CLUSTER
    match:
      context: SIDECAR_OUTBOUND
    patch:
      operation: ADD
      value: # cluster specification
        name: "etcd"
        type: STRICT_DNS
        connect_timeout: 0.5s
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: etcd
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    protocol: TCP
                    address: "localhost"
                    port_value: 2379
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: fs3-headers-out # Modify this line with a unique name for the target service
  namespace: default
spec:
  workloadSelector:
    labels:
      app: fs3 # Modify this line with the service name
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_FIRST
      value:
        name: envoy.lua
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
          inlineCode: |
            function envoy_on_request(request_handle)
              sources = request_handle:headers():get("sources") or ""
              tokens = request_handle:headers():get("tokens") or ""

              local bSources = enc("sourcesFS1")
              local bTokens = enc("tokensFS1")

              local headers, body = request_handle:httpCall("etcd", {
                [":method"] = "POST",
                [":path"] = "/v3/kv/range",
                [":authority"] = "fs3",
              }, '{"key": "'..bSources..'"}', 300000)
              local vInd = string.find(body, 'value', 1, true)
              local cInd = string.find(body, 'count', 1, true)
              local srcVal = dec(string.sub(body, vInd+8, cInd-6))

              local headers, body = request_handle:httpCall("etcd", {
                [":method"] = "POST",
                [":path"] = "/v3/kv/range",
                [":authority"] = "fs3",
              }, '{"key": "'..bTokens..'"}', 300000)
              local vInd = string.find(body, 'value', 1, true)
              local cInd = string.find(body, 'count', 1, true)
              srcTok = dec(string.sub(body, vInd+8, cInd-6))

              request_handle:headers():replace("sources", srcVal..",fs3")
              request_handle:headers():replace("tokens", srcTok..",token3")

              local sources = request_handle:headers():get("sources")
              local tokens = request_handle:headers():get("tokens")
              request_handle:logWarn("= SENT srcs: "..sources.." tokens: "..tokens.." =")
            end

            function envoy_on_response(response_handle)
            end

            local b='ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/' -- You will need this for encoding/decoding
            -- encoding
            function enc(data)
                return ((data:gsub('.', function(x)
                    local r,b='',x:byte()
                    for i=8,1,-1 do r=r..(b%2^i-b%2^(i-1)>0 and '1' or '0') end
                    return r;
                end)..'0000'):gsub('%d%d%d?%d?%d?%d?', function(x)
                    if (#x < 6) then return '' end
                    local c=0
                    for i=1,6 do c=c+(x:sub(i,i)=='1' and 2^(6-i) or 0) end
                    return b:sub(c+1,c+1)
                end)..({ '', '==', '=' })[#data%3+1])
            end

            -- decoding
            function dec(data)
                data = string.gsub(data, '[^'..b..'=]', '')
                return (data:gsub('.', function(x)
                    if (x == '=') then return '' end
                    local r,f='',(b:find(x)-1)
                    for i=6,1,-1 do r=r..(f%2^i-f%2^(i-1)>0 and '1' or '0') end
                    return r;
                end):gsub('%d%d%d?%d?%d?%d?%d?%d?', function(x)
                    if (#x ~= 8) then return '' end
                    local c=0
                    for i=1,8 do c=c+(x:sub(i,i)=='1' and 2^(8-i) or 0) end
                        return string.char(c)
                end))
            end
  - applyTo: CLUSTER
    match:
      context: SIDECAR_OUTBOUND
    patch:
      operation: ADD
      value: # cluster specification
        name: "etcd"
        type: STRICT_DNS
        connect_timeout: 0.5s
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: etcd
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    protocol: TCP
                    address: "localhost"
                    port_value: 2379

---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: fs4-headers-in # Modify this line with a unique name for the target service
  namespace: default
spec:
  workloadSelector:
    labels:
      app: fs4 # Modify this line with the service name
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_FIRST
      value:
        name: envoy.lua
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
          inlineCode: |
            function envoy_on_request(request_handle)
              sources = request_handle:headers():get("sources") or ""
              tokens = request_handle:headers():get("tokens") or ""
              request_handle:logWarn("= RECVD: srcs: "..sources.." tokens: "..tokens.." =")

              local bSources = enc("sourcesFS1")
              local bSrcs = enc(sources)

              local bTokens = enc("tokensFS1")
              local bToks = enc(tokens)

              local headers, body = request_handle:httpCall("etcd", {
                [":method"] = "POST",
                [":path"] = "/v3/kv/put",
                [":authority"] = "fs4",
              }, '{"key": "'..bSources..'", "value": "'..bSrcs..'"}', 300000)

              local headers, body = request_handle:httpCall("etcd", {
                [":method"] = "POST",
                [":path"] = "/v3/kv/put",
                [":authority"] = "fs4",
              }, '{"key": "'..bTokens..'", "value": "'..bToks..'"}', 300000)

            end

            function envoy_on_response(response_handle)
            end

            local b='ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/' -- You will need this for encoding/decoding
            -- encoding
            function enc(data)
                return ((data:gsub('.', function(x)
                    local r,b='',x:byte()
                    for i=8,1,-1 do r=r..(b%2^i-b%2^(i-1)>0 and '1' or '0') end
                    return r;
                end)..'0000'):gsub('%d%d%d?%d?%d?%d?', function(x)
                    if (#x < 6) then return '' end
                    local c=0
                    for i=1,6 do c=c+(x:sub(i,i)=='1' and 2^(6-i) or 0) end
                    return b:sub(c+1,c+1)
                end)..({ '', '==', '=' })[#data%3+1])
            end

            -- decoding
            function dec(data)
                data = string.gsub(data, '[^'..b..'=]', '')
                return (data:gsub('.', function(x)
                    if (x == '=') then return '' end
                    local r,f='',(b:find(x)-1)
                    for i=6,1,-1 do r=r..(f%2^i-f%2^(i-1)>0 and '1' or '0') end
                    return r;
                end):gsub('%d%d%d?%d?%d?%d?%d?%d?', function(x)
                    if (#x ~= 8) then return '' end
                    local c=0
                    for i=1,8 do c=c+(x:sub(i,i)=='1' and 2^(8-i) or 0) end
                        return string.char(c)
                end))
            end
  - applyTo: CLUSTER
    match:
      context: SIDECAR_OUTBOUND
    patch:
      operation: ADD
      value: # cluster specification
        name: "etcd"
        type: STRICT_DNS
        connect_timeout: 0.5s
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: etcd
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    protocol: TCP
                    address: "localhost"
                    port_value: 2379
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: fs4-headers-out # Modify this line with a unique name for the target service
  namespace: default
spec:
  workloadSelector:
    labels:
      app: fs4 # Modify this line with the service name
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_FIRST
      value:
        name: envoy.lua
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
          inlineCode: |
            function envoy_on_request(request_handle)
              sources = request_handle:headers():get("sources") or ""
              tokens = request_handle:headers():get("tokens") or ""

              local bSources = enc("sourcesFS1")
              local bTokens = enc("tokensFS1")

              local headers, body = request_handle:httpCall("etcd", {
                [":method"] = "POST",
                [":path"] = "/v3/kv/range",
                [":authority"] = "fs4",
              }, '{"key": "'..bSources..'"}', 300000)
              local vInd = string.find(body, 'value', 1, true)
              local cInd = string.find(body, 'count', 1, true)
              local srcVal = dec(string.sub(body, vInd+8, cInd-6))

              local headers, body = request_handle:httpCall("etcd", {
                [":method"] = "POST",
                [":path"] = "/v3/kv/range",
                [":authority"] = "fs4",
              }, '{"key": "'..bTokens..'"}', 300000)
              local vInd = string.find(body, 'value', 1, true)
              local cInd = string.find(body, 'count', 1, true)
              srcTok = dec(string.sub(body, vInd+8, cInd-6))

              request_handle:headers():replace("sources", srcVal..",fs4")
              request_handle:headers():replace("tokens", srcTok..",token4")

              local sources = request_handle:headers():get("sources")
              local tokens = request_handle:headers():get("tokens")
              request_handle:logWarn("= SENT srcs: "..sources.." tokens: "..tokens.." =")
            end

            function envoy_on_response(response_handle)
            end

            local b='ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/' -- You will need this for encoding/decoding
            -- encoding
            function enc(data)
                return ((data:gsub('.', function(x)
                    local r,b='',x:byte()
                    for i=8,1,-1 do r=r..(b%2^i-b%2^(i-1)>0 and '1' or '0') end
                    return r;
                end)..'0000'):gsub('%d%d%d?%d?%d?%d?', function(x)
                    if (#x < 6) then return '' end
                    local c=0
                    for i=1,6 do c=c+(x:sub(i,i)=='1' and 2^(6-i) or 0) end
                    return b:sub(c+1,c+1)
                end)..({ '', '==', '=' })[#data%3+1])
            end

            -- decoding
            function dec(data)
                data = string.gsub(data, '[^'..b..'=]', '')
                return (data:gsub('.', function(x)
                    if (x == '=') then return '' end
                    local r,f='',(b:find(x)-1)
                    for i=6,1,-1 do r=r..(f%2^i-f%2^(i-1)>0 and '1' or '0') end
                    return r;
                end):gsub('%d%d%d?%d?%d?%d?%d?%d?', function(x)
                    if (#x ~= 8) then return '' end
                    local c=0
                    for i=1,8 do c=c+(x:sub(i,i)=='1' and 2^(8-i) or 0) end
                        return string.char(c)
                end))
            end
  - applyTo: CLUSTER
    match:
      context: SIDECAR_OUTBOUND
    patch:
      operation: ADD
      value: # cluster specification
        name: "etcd"
        type: STRICT_DNS
        connect_timeout: 0.5s
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: etcd
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    protocol: TCP
                    address: "localhost"
                    port_value: 2379

---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: fs5-headers-in # Modify this line with a unique name for the target service
  namespace: default
spec:
  workloadSelector:
    labels:
      app: fs5 # Modify this line with the service name
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_FIRST
      value:
        name: envoy.lua
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
          inlineCode: |
            function envoy_on_request(request_handle)
              sources = request_handle:headers():get("sources") or ""
              tokens = request_handle:headers():get("tokens") or ""
              request_handle:logWarn("= RECVD: srcs: "..sources.." tokens: "..tokens.." =")

              local bSources = enc("sourcesFS1")
              local bSrcs = enc(sources)

              local bTokens = enc("tokensFS1")
              local bToks = enc(tokens)

              local headers, body = request_handle:httpCall("etcd", {
                [":method"] = "POST",
                [":path"] = "/v3/kv/put",
                [":authority"] = "fs5",
              }, '{"key": "'..bSources..'", "value": "'..bSrcs..'"}', 300000)

              local headers, body = request_handle:httpCall("etcd", {
                [":method"] = "POST",
                [":path"] = "/v3/kv/put",
                [":authority"] = "fs5",
              }, '{"key": "'..bTokens..'", "value": "'..bToks..'"}', 300000)

            end

            function envoy_on_response(response_handle)
            end

            local b='ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/' -- You will need this for encoding/decoding
            -- encoding
            function enc(data)
                return ((data:gsub('.', function(x)
                    local r,b='',x:byte()
                    for i=8,1,-1 do r=r..(b%2^i-b%2^(i-1)>0 and '1' or '0') end
                    return r;
                end)..'0000'):gsub('%d%d%d?%d?%d?%d?', function(x)
                    if (#x < 6) then return '' end
                    local c=0
                    for i=1,6 do c=c+(x:sub(i,i)=='1' and 2^(6-i) or 0) end
                    return b:sub(c+1,c+1)
                end)..({ '', '==', '=' })[#data%3+1])
            end

            -- decoding
            function dec(data)
                data = string.gsub(data, '[^'..b..'=]', '')
                return (data:gsub('.', function(x)
                    if (x == '=') then return '' end
                    local r,f='',(b:find(x)-1)
                    for i=6,1,-1 do r=r..(f%2^i-f%2^(i-1)>0 and '1' or '0') end
                    return r;
                end):gsub('%d%d%d?%d?%d?%d?%d?%d?', function(x)
                    if (#x ~= 8) then return '' end
                    local c=0
                    for i=1,8 do c=c+(x:sub(i,i)=='1' and 2^(8-i) or 0) end
                        return string.char(c)
                end))
            end
  - applyTo: CLUSTER
    match:
      context: SIDECAR_OUTBOUND
    patch:
      operation: ADD
      value: # cluster specification
        name: "etcd"
        type: STRICT_DNS
        connect_timeout: 0.5s
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: etcd
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    protocol: TCP
                    address: "localhost"
                    port_value: 2379
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: fs5-headers-out # Modify this line with a unique name for the target service
  namespace: default
spec:
  workloadSelector:
    labels:
      app: fs5 # Modify this line with the service name
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_FIRST
      value:
        name: envoy.lua
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
          inlineCode: |
            function envoy_on_request(request_handle)
              sources = request_handle:headers():get("sources") or ""
              tokens = request_handle:headers():get("tokens") or ""

              local bSources = enc("sourcesFS1")
              local bTokens = enc("tokensFS1")

              local headers, body = request_handle:httpCall("etcd", {
                [":method"] = "POST",
                [":path"] = "/v3/kv/range",
                [":authority"] = "fs5",
              }, '{"key": "'..bSources..'"}', 300000)
              local vInd = string.find(body, 'value', 1, true)
              local cInd = string.find(body, 'count', 1, true)
              local srcVal = dec(string.sub(body, vInd+8, cInd-6))

              local headers, body = request_handle:httpCall("etcd", {
                [":method"] = "POST",
                [":path"] = "/v3/kv/range",
                [":authority"] = "fs5",
              }, '{"key": "'..bTokens..'"}', 300000)
              local vInd = string.find(body, 'value', 1, true)
              local cInd = string.find(body, 'count', 1, true)
              srcTok = dec(string.sub(body, vInd+8, cInd-6))

              request_handle:headers():replace("sources", srcVal..",fs5")
              request_handle:headers():replace("tokens", srcTok..",token5")

              local sources = request_handle:headers():get("sources")
              local tokens = request_handle:headers():get("tokens")
              request_handle:logWarn("= SENT srcs: "..sources.." tokens: "..tokens.." =")
            end

            function envoy_on_response(response_handle)
            end

            local b='ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/' -- You will need this for encoding/decoding
            -- encoding
            function enc(data)
                return ((data:gsub('.', function(x)
                    local r,b='',x:byte()
                    for i=8,1,-1 do r=r..(b%2^i-b%2^(i-1)>0 and '1' or '0') end
                    return r;
                end)..'0000'):gsub('%d%d%d?%d?%d?%d?', function(x)
                    if (#x < 6) then return '' end
                    local c=0
                    for i=1,6 do c=c+(x:sub(i,i)=='1' and 2^(6-i) or 0) end
                    return b:sub(c+1,c+1)
                end)..({ '', '==', '=' })[#data%3+1])
            end

            -- decoding
            function dec(data)
                data = string.gsub(data, '[^'..b..'=]', '')
                return (data:gsub('.', function(x)
                    if (x == '=') then return '' end
                    local r,f='',(b:find(x)-1)
                    for i=6,1,-1 do r=r..(f%2^i-f%2^(i-1)>0 and '1' or '0') end
                    return r;
                end):gsub('%d%d%d?%d?%d?%d?%d?%d?', function(x)
                    if (#x ~= 8) then return '' end
                    local c=0
                    for i=1,8 do c=c+(x:sub(i,i)=='1' and 2^(8-i) or 0) end
                        return string.char(c)
                end))
            end
  - applyTo: CLUSTER
    match:
      context: SIDECAR_OUTBOUND
    patch:
      operation: ADD
      value: # cluster specification
        name: "etcd"
        type: STRICT_DNS
        connect_timeout: 0.5s
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: etcd
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    protocol: TCP
                    address: "localhost"
                    port_value: 2379
