CloudCover_prototype_testbed/anvResearch-main/kube_scripts/OPA-Testing/etcd-sidecar/standaloneAuthz.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: fs-opa
  namespace: default
spec:
  action: CUSTOM
  provider:
    name: "opa.default"
  rules:
  - to:
    - operation:
        methods: ["GET"]
